# termline

./: .gitignore  AGENTS.md  Cargo.toml  main.py  start.sh
.beads/: issues.jsonl
src/: main.rs
