[package]
name = "termline"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for OpenAI API
reqwest = { version = "0.12", features = ["stream", "json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# SSE (Server-Sent Events) parsing
eventsource-stream = "0.2"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI
crossterm = "0.28"
colored = "2.1"

# Markdown rendering
termimad = "0.31"

# Environment variables
dotenvy = "0.15"

# Async utilities
futures = "0.3"
